--- a/mainFiles/index.html
+++ b/mainFiles/index.html
@@ -7,6 +7,69 @@
 	<script src="js/main.js"></script>
 </head>
 <body>
-adasd
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-81213477-4', 'auto');
+      ga('send', 'pageview');
+
+	</script>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81213477-4"></script>
+	<script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+
+      gtag('config', 'UA-81213477-4');
+	</script>
+	<script type="text/javascript" src="script.js">
+	</script>
+
+
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<title>Random Number Generator</title>
+
+
+	<meta charset="UTF-8">
+	<meta name="description" content="A Random Number Generator, with an amazing ui.">
+	<meta name="keywords" content="rng, random, random number, random number generator, packersrulegopack, greenbayrules">
+	<meta name="author" content="Originally GreenBayRules (github user)">
+
+</head>
+<body>
+<div class="heading">
+	<img class="diceImg" src="images/dice.png">
+</div>
+<br/>
+<br/>
+<div class="heading specialheading">
+	<div class="input">
+		<h2 class="centeredText bouncy" style="display:inline">Min Number:</h2>
+			<input type="text" placeholder="Min..." id="minInput" class="numBox bouncy" style="display:inline"/>
+			&nbsp;&nbsp;&nbsp;&nbsp;
+			<h2 class="centeredText bouncy" style="display:inline">Max Number:</h2>
+				<input type="text" placeholder="Max..." id="maxInput" class="numBox bouncy" style="display:inline"/>
+				<br>
+				<center>
+					<input type="button" class="button bouncy" value="Generate!" onclick="onClick()"></input>
+				</center>
+	</div>
+	<h2 class="centeredText bouncy">Output:</h2>
+	<p id="output"></p>
+</div>
+
+</body>
+</html>
 </body>
 </html>
