added video file

--- a/mainFiles/index.html
+++ b/mainFiles/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ng</title>
+	<title>Number Generator</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/main.js"></script>
 </head>
@@ -54,6 +54,7 @@
 <br/>
 <br/>
 <div class="heading specialheading">
+	<h1 class="randNums">Meet RandNums!</h1>
 	<div class="input">
 		<h2 class="centeredText bouncy" style="display:inline">Min Number:</h2>
 			<input type="text" placeholder="Min..." id="minInput" class="numBox bouncy" style="display:inline"/>
