--- a/mainFiles/index.html
+++ b/mainFiles/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Number Generator</title>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 <body>
 <!DOCTYPE html>
